Добавил разметку по заданиям

--- a/efficient_frontier.ipynb
+++ b/efficient_frontier.ipynb
@@ -15,16 +15,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Загрузка лог-доходностей и матрицы\n",
-    "df_returns = pd.read_csv(\"df_log_returns.csv\", index_col=\"Date\", parse_dates=True)\n",
-    "\n",
-    "with open(\"cov_matrices_rolling.pkl\", \"rb\") as f:\n",
-    "    cov_matrices = pickle.load(f)"
+    "# 3: Оптимизация портфеля и границы эффективных портфелей"
    ]
   },
   {
@@ -114,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Граница эффективных портфелей без ограничений на short selling"
+    "# 5. Граница эффективных портфелей без ограничений на short selling"
    ]
   },
   {
@@ -183,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Граница с ограничением short-selling: не более 25% капитала на бумагу"
+    "# 6. Граница с ограничением short-selling: не более 25% капитала на бумагу"
    ]
   },
   {
@@ -250,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Граница эффективных портфелей при запрете на short selling"
+    "# 7. Граница эффективных портфелей при запрете на short selling"
    ]
   },
   {
@@ -318,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Граница: минимум 2% капитала в каждой акции "
+    "# 8. Граница: минимум 2% капитала в каждой акции "
    ]
   },
   {
@@ -387,7 +381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Динамика границ эффективных портфелей во времени"
+    "# 9. Динамика границ эффективных портфелей во времени"
    ]
   },
   {
@@ -552,7 +546,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Оценка входящих данных для optimizer на основе исторических β"
+    "# Сравнение различных подходов к оценке входящих данных для optimizer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 11.\n",
+    "__Индекс IMOEX (Московской биржи, рублёвый)__ - включает в себя крупнейшие и самые ликвидные акции РФ, в том числе те, что уже есть в анализируемом портфеле. Используется как бенчмарк для рыночной доходности в российском контексте, особенно в рамках модели рыночного портфеля."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 12.\n",
+    "__Схема взвешивания: Равновзвешенное окно на 1 год__ - совпадает с предыдущими расчётами, позволяет сопоставить β-подход с доходностным"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 13. Оценка входящих данных для optimizer на основе исторических β"
    ]
   },
   {
@@ -1626,7 +1643,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Построение границы эффективных портфелей на основе ковариационной матрицы по историческим β"
+    "# 14. Построение границы эффективных портфелей на основе ковариационной матрицы по историческим β"
    ]
   },
   {
@@ -1694,7 +1711,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Оценка входящих данных для optimizer на основе скорректированных β"
+    "# 16. Оценка входящих данных для optimizer на основе скорректированных β"
    ]
   },
   {
@@ -2630,6 +2647,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 17. Построение границы эффективных портфелей на основе ковариационной матрицы по скорректированным β"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
@@ -2692,7 +2716,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Сравнение границ эффективных портфелей"
+    "# 19. Сравнение границ эффективных портфелей"
    ]
   },
   {
